recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:1: error: identifier expected but integer literal found.
def spiral(5,90,0, 3)    {
           ^Spiral:12: error: ':' expected but '}' found.
}
^